--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.4.2",
-    "@heroicons/vue": "^1.0.5",
     "core-js": "^3.6.5",
-    "tailwindcss": "^3.0.0",
+    "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
